# Manipulating-TGA-Files

./: CMakeLists.txt  Manipulating-tga.c  README.md
